--- a/style.css
+++ b/style.css
@@ -222,6 +222,9 @@ section {
     margin: 0 auto;
 }
 
+section { scroll-margin-top: 90px; }
+
+
 .section-header {
     text-align: center;
     margin-bottom: 4rem;
@@ -616,3 +619,4 @@ footer {
         font-size: 0.9rem;
     }
 }
+
